# static_shared_lib

./: CMakeLists.txt  README.md  main.cpp
math/: CMakeLists.txt  mathlib.cpp  mathlib.h
